# decentralized_eservicemanipur

./: README.md  algo_one.md  algo_three.md  algo_two.md  api_documentation.md  authorizatoin.md  database_schema_map.md  er.md  eseba.db  eseba_er_notation.txt  file_locking.md  implementation_plan.md  main.py  public_audit.md  pyproject.toml  requirements.txt  streamlit_app.py  task.md  verification_transaction.md  walkthrough.md  walkthrough2.md
app/: config.py  database.py  dependencies.py  main.py
app/api/: admin.py  applications.py  audit.py  auth.py  authorization.py  citizen.py  documents.py  employment.py  router.py  verification.py
app/models/: __init__.py  admin.py  application.py  certificate.py  citizen.py  employment.py  ledger.py  notification.py
app/schemas/: admin.py  application.py  auth.py  citizen.py  employment.py  verification.py
app/seed/: run_seed.py  seed_citizens.py  seed_offices.py  seed_officials.py  seed_roles.py  seed_services.py
app/services/: application_service.py  certificate_service.py  crypto_service.py  employment_service.py  identity_service.py  ledger_service.py
app/simulators/: aadhaar_gateway.py  dsc_verifier.py  otp_provider.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CitizenPortal.jsx  OfficialPortal.jsx  PortalHome.jsx
migrations/: env.py
migrations/versions/: a3c361765e69_initial_tables.py
tests/: conftest.py  test_applications.py  test_auth.py  test_ledger.py
